# ai-systems-journey

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DECISION-LOG-module-1-llm-api.md  Dockerfile  PRD-module-1-llm-api.md  PROGRESS.md  README.md  fly.toml  pyproject.toml
app/: main.py
app/core/: config.py  cost.py  llm.py  logging.py  timing.py
app/models/: summary.py
app/routers/: health.py  summarize.py
app/services/: summarizer.py
tests/: test_summarize.py
