[project]
name = "ai-systems-journey"
version = "0.1.0"
description = "Build-in-public journey toward production AI systems"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
